[project]
name = "voice-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "sqlmodel>=0.0.22",
    "pydantic>=2.7",
    "pydantic-settings>=2.0",
    "logfire[httpx,fastapi,sqlalchemy]>=4.0",
    "pydantic-ai-slim[anthropic]>=1.0",
    "pydantic-evals>=1.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "evals"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
