[project]
name = "voice-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "sqlmodel>=0.0.22",
    "pydantic>=2.7",
    "pydantic-settings>=2.0",
    "logfire[httpx,fastapi,sqlalchemy]>=4.0",
    "pydantic-ai-slim[anthropic,google,groq,openai]>=1.0",
    "pydantic-evals>=1.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "python-multipart>=0.0.26",
    "pydantic-ai>=1.90.0",
    "alembic>=1.18.4",
    "psycopg2-binary>=2.9.12",
    "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "pytest-mock>=3.14",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "evals"]
markers = [
    "slow: full simulation evals (~45s, 2 personas, nightly CI or pre-deploy)",
    "replay: deterministic replay evals (~20s, CI-safe fast path)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
